--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@popperjs/core": "^2.11.6",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "konva": "^8.4.2",
     "primeicons": "^6.0.1",
     "primeng": "^15.2.0",
     "rxjs": "~7.8.0",
